--- a/index.html
+++ b/index.html
@@ -4,7 +4,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TemplateFlow | Premium Email Templates</title>
+    <title>Best Email Designs | High-Conversion Templates for Modern Brands</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Discover the best email designs for skincare, beauty, fashion, and therapy businesses. Professional, responsive email templates designed to drive sales and engagement." />
+    <meta name="keywords" content="best email designs, email templates for therapy, skincare email marketing, beauty newsletter templates, fashion email layouts, ecommerce welcome series" />
+    <meta name="author" content="Best Email Designs" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bestemaildesigns.com/" />
+    <meta property="og:title" content="Best Email Designs | Premium Email Templates" />
+    <meta property="og:description" content="Elevate your brand with professional email designs tailored for fashion, skincare, and wellness businesses." />
+    <meta property="og:image" content="https://res.cloudinary.com/dqhawdcol/image/upload/v1767629735/d7ossdffxjwyecr82uce.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Best Email Designs | Premium Email Templates" />
+    <meta property="twitter:description" content="Elevate your brand with professional email designs tailored for fashion, skincare, and wellness businesses." />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "Best Email Designs",
+        "description": "Premium email template marketplace for business growth.",
+        "url": "https://bestemaildesigns.com",
+        "mainEntity": {
+          "@type": "ItemList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Skincare Templates"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Therapy & Wellness Templates"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Fashion Ecommerce Templates"
+            }
+          ]
+        }
+      }
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,13 +81,23 @@
         color: #212022;
         margin: 0;
       }
-      /* Smooth global transitions */
       * { transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease, transform 0.2s ease; }
     </style>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+  }
+}
+</script>
+</head>
   <body>
     <div id="root"></div>
-    <!-- Explicitly load index.tsx as a module -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
